hphp/test/zend/good/Zend/tests/traits/bug64235.php.expectf

Fatal error: Unknown trait 'TestParentClass' in %s/bug64235.php on line 21
